tests/cases/should_fail/literals/double_comma_in_list_literal.stderr
error: expected an expression, however received a `,`
 --> $DIR/double_comma_in_list_literal.hash:1:9
1 |   k := [1,,];
  |           ^ here
